fix: max-width on widget and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -970,6 +970,7 @@ h4, h5, h6 {
   width: 100%;
   height: 100%;
   min-height: 500px;
+  max-width: 400px;
   border-radius: 8px;
 }
 
